--- a/UX Offical/Restaurant1Page.html
+++ b/UX Offical/Restaurant1Page.html
@@ -57,6 +57,10 @@
             <p>Saturday and Sunday: Closed</p>
         </div>
 
+        <div class="spacing_container">
+            <h1>Contact Us</h1>
+            <p>Phone Number: +65 8888 8888</p>
+        </div>
 
 
     </div>
