--- a/UX Offical/Restaurant2Page.html
+++ b/UX Offical/Restaurant2Page.html
@@ -6,14 +6,14 @@
 
   <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
-  <link rel="stylesheet" href="CSS/Resturant.css">
+  <link rel="stylesheet" href="CSS/RestaurantPages123.css">
   <link rel="stylesheet" href="CSS/Footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Dining</title><!-- REPLACE title as what u want -->
+  <title>Restaurant 1</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -21,7 +21,7 @@
         <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
         </label>
-        <label class ="logo">The logo here</label>
+        <label class ="logo">The logo</label>
         <ul>
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
@@ -33,65 +33,37 @@
     </nav>
 
     <header>
-        <div class="Header">
-          <h1 class = "Title">Dining</h1>
-          <img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
-        </div>
+        <img src="ImageNVideo/SushiRestaurant.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
     </header>
-    <div class="intro_container">
-      <img class ="IntroPic" src="ImageNVideo/FineDiningLandscape1.jpg" alt="">
-      <h1 class="Dining_Description">The Art of Dining</h1>
-      <p class="intro-textsize">welcome. Eat at Our Restaurant Please, Filler, filler, filler,filler Filler, filler, filler,filler Filler, filler, filler,filler.<br>Thanks</p>
+
+    <div class="Main_container">
+        <div class="spacing_container">
+            <h1>Restaurant 2</h1>
+            <p>This is a Sushi restaurant. We provide really good sushi.</p>
+            <br>
+            <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
+        </div>
+
+        <div class="spacing_container">
+            <h1>Menu</h1>
+            <br>
+            <br>
+            <a href="Willow Menu.pdf" class="ReserveButton">View Menu</a>
+        </div>
+
+        <div class="spacing_container">
+            <h1>Operating Time</h1>
+            <p>Monday to Friday: 9am to 11pm</p>
+            <p>Saturday and Sunday: Closed</p>
+        </div>
+
+        <div class="spacing_container">
+            <h1>Contact Us</h1>
+            <p>Phone Number: +65 8888 8888</p>
+        </div>
+
     </div>
 
-
-    </div> 
-    <h1 class = "Restaurant_Text_Intro">Restaurants at Reza Resort</h1>
-    <div class = "Container_ALL">
-      <div class="container_tally">
-
-        <div class="card-container">
-          <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
-            <h2>Restaurant 1</h2>
-            <p>This is the first restaurant.</p>
-            <br>
-            <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
-          </div>
-        </div> 
-        <div class="card-container">
-          <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
-            <h2>Restaurant 2</h2>
-            <p>This is the second restaurant.</p>
-            <br>
-            <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
-          </div>
-        </div>
-        <div class="card-container">
-          <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
-            <h2>Restaurant 3</h2>
-            <p>This is the third restaurant.</p>
-            <br>
-            <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
-          </div>
-        </div>
-        <div class="card-container">
-          <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 4">
-            <h2>Restaurant 4</h2>
-            <p>This is the Fourth restaurant.</p>
-            <br>
-            <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
     <footer>
         <div class="section1_footer">
           <div class="part1footerleft">
