--- a/UX Offical/Restaurant4Page.html
+++ b/UX Offical/Restaurant4Page.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Restaurant 3</title><!-- REPLACE title as what u want -->
+  <title>Restaurant 4</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -33,13 +33,13 @@
     </nav>
 
     <header>
-        <img src="ImageNVideo/KPOCafeBar2.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+        <img src="ImageNVideo/BreakfastBuffet.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
     </header>
 
     <div class="Main_container">
         <div class="spacing_container">
-            <h1>Restaurant 3</h1>
-            <p>This is a Cafe Bar Restaurant. We provide really good Drinks and Food.</p>
+            <h1>Restaurant 4</h1>
+            <p>This is a Breakfast Restaurant. We provide really good Breakfast.</p>
             <br>
             <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
         </div>
@@ -53,7 +53,7 @@
 
         <div class="spacing_container">
             <h1>Operating Time</h1>
-            <p>Monday to Sunday: 9am to 11pm <br> Last Order at 10pm</p>
+            <p>Monday to Sunday: 9am to 11:30am</p>
         </div>
 
         <div class="spacing_container">
