--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -47,6 +47,7 @@
 
     </div> 
     <h1 class = "Restaurant_Text_Intro">Restaurants at Reza Resort</h1>
+  
     <div class = "Container_ALL">
       <div class="container_tally">
 
@@ -54,40 +55,40 @@
           <div class="card">
             <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
             <h2>Restaurant 1</h2>
-            <p>This is the first restaurant.</p>
+            <p>Fine Dining at the Beach</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
+            <a class = "book_button"href="Restaurant1Page.html">Learn More</a>
           </div>
         </div> 
         <div class="card-container">
           <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
+            <img src="ImageNVideo/SushiRestaurant.jpg" alt="Restaurant 2">
             <h2>Restaurant 2</h2>
-            <p>This is the second restaurant.</p>
+            <p>Experience the best Japanese Cuisine</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
+            <a class = "book_button"href="Restaurant2Page.html">Learn More</a>
           </div>
         </div>
         <div class="card-container">
           <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
+            <img src="ImageNVideo/KPOCafeBar2.jpg" alt="Restaurant 3">
             <h2>Restaurant 3</h2>
-            <p>This is the third restaurant.</p>
+            <p>Bar Cafe</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
+            <a class = "book_button"href="Restaurant3Page.html">Learn More</a>
           </div>
         </div>
         <div class="card-container">
           <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 4">
+            <img src="ImageNVideo/BreakfastBuffet.jpg" alt="Restaurant 4">
             <h2>Restaurant 4</h2>
-            <p>This is the Fourth restaurant.</p>
+            <p>Breakfast Buffet</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
+            <a class = "book_button"href="Restaurant4Page.html">Learn More</a>
           </div>
         </div>
       </div>
