--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -41,7 +41,9 @@
     <div class="intro_container">
       <img class ="IntroPic" src="ImageNVideo/FineDiningLandscape1.jpg" alt="">
       <h1 class="Dining_Description">The Art of Dining</h1>
-      <p class="intro-textsize">welcome. Eat at Our Restaurant Please, Filler, filler, filler,filler Filler, filler, filler,filler Filler, filler, filler,filler.<br>Thanks</p>
+      <p class="intro-textsize">welcome. Eat at Our Restaurant Please, Filler, filler, filler,filler Filler, filler, filler,filler Filler, filler, filler,filler.<br><br><br><a class = "book_button"href="Resturantforms2.html">Reserve Table</a></p>
+
+      
     </div>
 
 
@@ -53,7 +55,7 @@
 
         <div class="card-container">
           <div class="card">
-            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
+            <img src="ImageNVideo/beach-restaurant-evening.jpg" alt="Restaurant 1">
             <h2>Restaurant 1</h2>
             <p>Fine Dining at the Beach</p>
             <br>
