--- a/UX Offical/template.html
+++ b/UX Offical/template.html
@@ -47,9 +47,9 @@
               <div class="insidepart1">
                   <h1 class="title">Socials</h1>
                   <div class="socialicon_container">
-                  <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="images/edited/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
-                  <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="images/edited/Facebook.jpg" alt="" class="socialmediaicon"></a>
-                  <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="images/edited/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
                   <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
                   </div>  
               </div>
