--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
   
   <title>Home</title><!-- REPLACE title as what u want -->
 </head>
@@ -32,7 +32,7 @@
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
             </ul>
-                  </nav>
+      </nav>
 
   <div class="bigimage" alt="main-image">
     <image src="ImageNVideo/1080p img.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
