--- a/UX Offical/Restaurant2Page.html
+++ b/UX Offical/Restaurant2Page.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link rel="stylesheet" href="CSS/RestaurantPages123.css">
   <link rel="stylesheet" href="CSS/Footer.css">
@@ -13,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Restaurant 2</title><!-- REPLACE title as what u want -->
+  <title>Restaurant 2</title>
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
