--- a/UX Offical/Resturantforms2.html
+++ b/UX Offical/Resturantforms2.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link rel="stylesheet" href="CSS/Resturantforms2.css">
   <link rel="stylesheet" href="CSS/Footer.css">
@@ -13,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Dining</title>
+  <title>Dining Reservation Form</title>
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -138,9 +137,9 @@
                     <div class="insidepart1">
                         <h1 class="title">Socials</h1>
                         <div class="socialicon_container">
-                        <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="images/edited/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
-                        <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="images/edited/Facebook.jpg" alt="" class="socialmediaicon"></a>
-                        <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="images/edited/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                            <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                            <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                            <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
                         <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
                         </div>  
                     </div>
