--- a/UX Offical/Garden View Standard room.html
+++ b/UX Offical/Garden View Standard room.html
@@ -5,12 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garden View Roon</title>
     <link rel="stylesheet" href="CSS/Garden View Room Style sheet.css">
+    
+    <link rel="stylesheet" href="CSS/NewNavbar.css">
+    <link rel="stylesheet" href="CSS/Resturant.css">
+    <link rel="stylesheet" href="CSS/Footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkboxbutton">
+            <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
+        </label>
+        <label class ="logo">The logo here</label>
+        <ul>
+            <li><a class="active" href="Homepage.html">Home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">rooms</a></li>
+            <li><a href="ResturantPage.html">dining</a></li>
+            <li><a href="#">facilities</a></li>
+            <li><a href="#" class="navbutton">Book now</a></li>
+        </ul>
+    </nav>
+
+
     <div class="roomwebpageheader">
         <h1 class="roomwebpagetitle">Garden Room View</h1>
-        <img src="images/line break hotel website edited.jpg" alt="" class="linebreak">
-        <img src="images/standard garden view room.jpg" alt="" class="gardenroomimage">
+        <img src="ImageNVideo/line break hotel website edited.jpg" alt="" class="linebreak">
+        <img src="ImageNVideo/standard garden view room.jpg" alt="" class="gardenroomimage">
     </div>
 
     <div class="mainbodyofroomwebpage">
