--- a/UX Offical/Payment webpage 1 (Date Selection).html
+++ b/UX Offical/Payment webpage 1 (Date Selection).html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Payment_pages_stylesheet.css">
     <title>Date Selection</title>
+
+    <link rel="stylesheet" href="CSS/NewNavbar.css">
+    <link rel="stylesheet" href="CSS/Resturant.css">
+    <link rel="stylesheet" href="CSS/Footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkboxbutton">
+            <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
+        </label>
+        <label class ="logo">The logo here</label>
+        <ul>
+            <li><a class="active" href="Homepage.html">Home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">rooms</a></li>
+            <li><a href="ResturantPage.html">dining</a></li>
+            <li><a href="#">facilities</a></li>
+            <li><a href="#" class="navbutton">Book now</a></li>
+        </ul>
+    </nav>
+    
 
     <div class="paymentwebpageheader">
         <h1 class="paymentwebpageheader">Room Booking</h1>
