--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -50,7 +50,7 @@
             <h1 class="garden_oasis_room_header_to_book">Garden Oasis Room</h1>
 
             <div class="garden_oasis_room_container_for_image_text">
-            <img src="images/standard garden view room.jpg" alt="" class="garden_oasis_room_image_to_book">
+            <img src="ImageNVideo/standard garden view room.jpg" alt="" class="garden_oasis_room_image_to_book">
 
             <div class="garden_oasis_room_container_for_button_text">
                 <p class="garden_oasis_room_text_to_book">Embrace tranquility in this elegantly designed haven, where French doors open to a private garden, blending nature's beauty with modern luxury, offering a serene retreat for an enchanting stay.</p>
@@ -66,7 +66,7 @@
             <h1 class="Ocean_Retreat_Room_header_to_book">Ocean Retreat Room</h1>
 
             <div class="Ocean_Retreat_Room_container_for_image_text">
-            <img src="images/standard seaview room.jpg" alt="" class="Ocean_Retreat_Room_image_to_book">
+            <img src="ImageNVideo/standard seaview room.jpg" alt="" class="Ocean_Retreat_Room_image_to_book">
 
             <div class="Ocean_Retreat_Room_container_for_button_text">
                 <p class="Ocean_Retreat_Room_text_to_book">Surrender to coastal charm in this room with floor-to-ceiling windows framing mesmerizing ocean vistas, pampering guests with lavish amenities, ensuring a rejuvenating and unforgettable experience.</p>
@@ -83,7 +83,7 @@
             <h1 class="Premium_Oasis_Suite_header_to_book">Premium Oasis Suite</h1>
 
             <div class="Premium_Oasis_Suite_container_for_image_text">
-            <img src="images/Premium suite.jpg" alt="" class="Premium_Oasis_Suite_image_to_book">
+            <img src="ImageNVideo/Premium suite.jpg" alt="" class="Premium_Oasis_Suite_image_to_book">
 
             <div class="Premium_Oasis_Suite_container_for_button_text">
                 <p class="Premium_Oasis_Suite_text_to_book"> Unparalleled opulence awaits in this spacious and sophisticated suite, adorned with plush furnishings and premium comforts, providing exclusive services and amenities, perfect for the discerning traveler seeking a lavish escape.</p>
@@ -101,7 +101,7 @@
             <h1 class="Sentosa_Suite_header_to_book">Sentosa Suite</h1>
 
             <div class="Sentosa_Suite_container_for_image_text">
-            <img src="images/Sentosa suite.jpg" alt="" class="Sentosa_Suite_image_to_book">
+            <img src="ImageNVideo/Sentosa suite.jpg" alt="" class="Sentosa_Suite_image_to_book">
 
             <div class="Sentosa_Suite_container_for_button_text">
                 <p class="Sentosa_Suite_text_to_book">Indulge in exquisite luxury within this suite boasting panoramic views of Sentosa Island, epitomizing elegance with meticulous attention to detail, offering a grand, comfortable, and memorable stay in utmost style.</p>
