--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -7,6 +7,7 @@
   <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/HomepageNav.css">
   <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
+  <link href="CSS/Footer.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
@@ -57,7 +58,9 @@
         <input type="date"  name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31" style="margin-left: 10px;height: 30px; font-size: 17px;" > 
         <label for="checkout" id="checkoutdate" style="padding-left: 10px;color: black  ;" class="special" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
         <input type="date" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31" style="margin-left: 10px;height: 30px;font-size: 17px;">
+        <a href="Garden View Standard room.html">
         <div class="arrow-button" id="arrowbutton">
+        </a>
         <span style="font-size: 24px;"></span>
         </div>
         </div>
@@ -133,10 +136,35 @@
 </div>  
 
 
-  <footer>
-    <div class="footer-container">
-      <p>Footer here Aiman doing</p>
+<footer>
+  <div class="section1_footer">
+    <div class="part1footerleft">
+        <div class="insidepart1">
+            <h1 class="title">Contact Us</h1>
+            <div class="contact_container">
+            <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+            <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+            <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+            </div>
+        </div> 
     </div>
-  <script src="JS/Reactive1.js"></script>
+
+    <div class="part1footerright">
+        <div class="insidepart1">
+            <h1 class="title">Socials</h1>
+            <div class="socialicon_container">
+              <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+              <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+              <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
+            <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+            </div>  
+        </div>
+    </div>
+  </div>
+
+  <div class="part2footer">
+      <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+  </div>
+</footer>
 </body>
 </html>
