--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -40,7 +40,8 @@
     <div class="intro_container">
       <img class ="IntroPic" src="ImageNVideo/FineDiningLandscape1.jpg" alt="">
       <h1 class="Dining_Description">The Art of Dining</h1>
-      <p class="intro-textsize">welcome. Eat at Our Restaurant Please, Filler, filler, filler,filler Filler, filler, filler,filler Filler, filler, filler,filler.<br><br><br><a class = "book_button"href="Resturantforms2.html">Reserve Table</a></p>
+      <p class="intro-textsize">The art of dining is more than just eating good food. It's about savoring the experience, from the presentation of the dish to the company you're sharing it with.<br><br>
+        A well-prepared meal can be a work of art, and the art of dining is about appreciating all the elements that go into creating that experience.<br><br><br><a class = "book_button"href="Resturantforms2.html">Reserve Table</a></p>
 
       
     </div>
