--- a/UX Offical/Garden View Standard room.html
+++ b/UX Offical/Garden View Standard room.html
@@ -45,6 +45,36 @@
     </div>
 
     
+    <footer>
+        <div class="section1_footer">
+          <div class="part1footerleft">
+              <div class="insidepart1">
+                  <h1 class="title">Contact Us</h1>
+                  <div class="contact_container">
+                  <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+                  <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+                  <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+                  </div>
+              </div> 
+          </div>
+
+          <div class="part1footerright">
+              <div class="insidepart1">
+                  <h1 class="title">Socials</h1>
+                  <div class="socialicon_container">
+                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                  <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+                  </div>  
+              </div>
+          </div>
+        </div>
+
+        <div class="part2footer">
+            <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+        </div>
+    </footer>
     
 </body>
 </html>
