--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -49,7 +49,7 @@
          <span style="font-family: 'Playfair Display', serif; color: white;"> Experience true opulence and<br> personalized service at its finest<br>
          immerse yourself in luxury <br>
         
-        <a href="Bookingpage">
+         <a href="Rooms webpage.html">
          <button id="bookbutton" class="Bookingbutton">Book here</button>
          </a>
         </p>
@@ -58,9 +58,8 @@
         <input type="date"  name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31" style="margin-left: 10px;height: 30px; font-size: 17px;" > 
         <label for="checkout" id="checkoutdate" style="padding-left: 10px;color: black  ;" class="special" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
         <input type="date" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31" style="margin-left: 10px;height: 30px;font-size: 17px;">
-        <a href="Garden View Standard room.html">
+
         <div class="arrow-button" id="arrowbutton">
-        </a>
         <span style="font-size: 24px;"></span>
         </div>
         </div>
