--- a/UX Offical/Restaurant1Page.html
+++ b/UX Offical/Restaurant1Page.html
@@ -38,7 +38,7 @@
     <div class="Main_container">
         <div class="spacing_container">
             <h1>Restaurant 1</h1>
-            <p>This is a fine dining restaurant. We provide really good food.</p>
+            <p>This is a Beach fine dining restaurant. On a warm summer night, there is nothing quite like dining al fresco on the beach, enjoying the sound of the waves and the smell of the ocean air, while savoring a delicious meal of fine cuisine.</p>
             <br>
             <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
         </div>
