--- a/UX Offical/Restaurant2Page.html
+++ b/UX Offical/Restaurant2Page.html
@@ -38,7 +38,7 @@
     <div class="Main_container">
         <div class="spacing_container">
             <h1>Restaurant 2</h1>
-            <p>This is a Sushi restaurant. We provide really good sushi.</p>
+            <p>This is a Sushi restaurant. For a taste of authentic Japanese cuisine, dine at this traditional restaurant, where you can savor fresh sushi, sashimi, and other dishes made with carefully selected ingredients.</p>
             <br>
             <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
         </div>
