--- a/UX Offical/Restaurant3Page.html
+++ b/UX Offical/Restaurant3Page.html
@@ -38,7 +38,7 @@
     <div class="Main_container">
         <div class="spacing_container">
             <h1>Restaurant 3</h1>
-            <p>This is a Cafe Bar Restaurant. We provide really good Drinks and Food.</p>
+            <p>This is a Cafe Bar Restaurant. Whether you're looking for a quick bite to eat, a leisurely lunch, or a night out with friends, this cafe bar restaurant has something for everyone. With its warm and inviting atmosphere, delicious food, and wide selection of drinks, it's the perfect place to relax and enjoy yourself.</p>
             <br>
             <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
         </div>
