--- a/UX Offical/Restaurant4Page.html
+++ b/UX Offical/Restaurant4Page.html
@@ -38,7 +38,7 @@
     <div class="Main_container">
         <div class="spacing_container">
             <h1>Restaurant 4</h1>
-            <p>This is a Breakfast Restaurant. We provide really good Breakfast.</p>
+            <p>This is a Breakfast Restaurant. Start your day off right with a hearty breakfast buffet at this popular restaurant. With a wide variety of dishes to choose from, you're sure to find something to your taste. From eggs and pancakes to waffles and bacon, there's something for everyone at this breakfast buffet restaurant.</p>
             <br>
             <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
         </div>
