--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -26,7 +26,7 @@
           </label>
           <label class ="logo">The logo here</label>
           <ul>
-            <li><a class="active" href="Homepage.html">Home</a></li>
+            <li clas="color"><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">rooms</a></li>
             <li><a href="ResturantPage.html">Dining</a></li>
