--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/Payment_pages_stylesheet4.css">
     <title>Document</title>
 
     <link rel="stylesheet" href="CSS/NewNavbar.css">
@@ -30,6 +31,36 @@
             <li><a href="#" class="navbutton">Book now</a></li>
         </ul>
     </nav>
+    
+
+    <div class="paymentwebpageheader">
+        <h1 class="paymentwebpageheader">Room Booking</h1>
+        <h2></h2>
+    </div>
+
+
+
+    <div class="payment_indicator">
+        <div class="date_indicator">
+            <a href="" class="date_selectionlink"><p class="circle_step_counter_date">1</p></a>
+            <p class="text_next_to_date_indicator_icon">Date Selection</p>
+        </div>
+
+        <div class="room_indicator">
+            <a href="" class="room_selectionlink"><p class="circle_step_counter_room">2</p></a>
+            <p class="text_next_to_room_indicator_icon">Room Selection</p>
+        </div>
+
+        <div class="guestcard_info_indicator">
+            <a href="" class="guest_selectionlink"><p class="circle_step_counter_guest">3</p></a>
+            <p class="text_next_to_guest_indicator_icon">Guest & Payment</p>
+        </div>
+
+        <div class="confirmation_indicator">
+            <a href="" class="confirmation_selectionlink"><p class="circle_step_counter_confirmation">4</p></a>
+            <p class="text_next_to_confirmation_indicator_icon">Confirmation</p>
+        </div>
+    </div> 
 
 
 
