--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -64,6 +64,15 @@
 
 
 
+    <div class="important_infomation">
+        <h1 class="information_header">Infomation</h1>
+        <p class="information_checkin_date">Check-In date: *insert check out date</p>
+        <p class="information_checkout_date">Check-Out date: *insert check out date</p>
+        <p class="information_days_counter_date"># days, # nights</p>
+    </div>
+
+
+
 
 
 
