--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -31,7 +31,7 @@
             <li><a href="#" class="navbutton">Book now</a></li>
         </ul>
     </nav>
-    
+
 
     <div class="paymentwebpageheader">
         <h1 class="paymentwebpageheader">Room Booking</h1>
@@ -61,6 +61,15 @@
             <p class="text_next_to_confirmation_indicator_icon">Confirmation</p>
         </div>
     </div> 
+
+
+
+    <div class="important_infomation">
+        <h1 class="information_header">Infomation</h1>
+        <p class="information_checkin_date">Check-In date: *insert check out date</p>
+        <p class="information_checkout_date">Check-Out date: *insert check out date</p>
+        <p class="information_days_counter_date"># days, # nights</p>
+    </div>
 
 
 
