--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -64,6 +64,13 @@
 
 
 
+    <div class="container_rooms_selections">
+
+        
+    </div>
+
+
+
     <div class="important_infomation">
         <h1 class="information_header">Infomation</h1>
         <p class="information_checkin_date">Check-In date: *insert check out date</p>
