some interactive stuff

--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/HomepageNav.css">
   <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
   <link href="CSS/Footer.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,11 +26,11 @@
           </label>
           <label class ="logo">The logo here</label>
           <ul>
-            <li clas="color"><a class="active" href="Homepage.html">Home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">rooms</a></li>
-            <li><a href="ResturantPage.html">Dining</a></li>
-            <li><a href="#">facilities</a></li>
+            <li><a class="colorchange" href="Homepage.html">Home</a></li>
+            <li><a class="colorchange" href="#">about</a></li>
+            <li><a class="colorchange" href="#">rooms</a></li>
+            <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
+            <li><a class="colorchange" href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
             </ul>
       </nav>
