--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -79,7 +79,7 @@
 
             <div class="garden_oasis_room_container_for_button_text">
                 <p class="garden_oasis_room_text_to_book">Embrace tranquility in this elegantly designed haven, where French doors open to a private garden, blending nature's beauty with modern luxury, offering a serene retreat for an enchanting stay.</p>
-                <a href="" class="garden_oasis_room_button"><p class="garden_oasis_room_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="garden_oasis_room_button"><p class="garden_oasis_room_text_in_button">Select Room</p></a>
             </div>
             </div>
             <hr class="line_break_seperating_rooms">
@@ -95,7 +95,7 @@
 
             <div class="Ocean_Retreat_Room_container_for_button_text">
                 <p class="Ocean_Retreat_Room_text_to_book">Surrender to coastal charm in this room with floor-to-ceiling windows framing mesmerizing ocean vistas, pampering guests with lavish amenities, ensuring a rejuvenating and unforgettable experience.</p>
-                <a href="" class="Ocean_Retreat_Room_button"><p class="Ocean_Retreat_Room_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="Ocean_Retreat_Room_button"><p class="Ocean_Retreat_Room_text_in_button">Select Room</p></a>
             </div>
             </div>
             <hr class="line_break_seperating_rooms">
@@ -112,7 +112,7 @@
 
             <div class="Premium_Oasis_Suite_container_for_button_text">
                 <p class="Premium_Oasis_Suite_text_to_book"> Unparalleled opulence awaits in this spacious and sophisticated suite, adorned with plush furnishings and premium comforts, providing exclusive services and amenities, perfect for the discerning traveler seeking a lavish escape.</p>
-                <a href="" class="Premium_Oasis_Suite_button"><p class="Premium_Oasis_Suite_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="Premium_Oasis_Suite_button"><p class="Premium_Oasis_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
             <hr class="line_break_seperating_rooms">
@@ -130,7 +130,7 @@
 
             <div class="Sentosa_Suite_container_for_button_text">
                 <p class="Sentosa_Suite_text_to_book">Indulge in exquisite luxury within this suite boasting panoramic views of Sentosa Island, epitomizing elegance with meticulous attention to detail, offering a grand, comfortable, and memorable stay in utmost style.</p>
-                <a href="" class="Sentosa_Suite_button"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="Sentosa_Suite_button"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
         </div>
