--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -65,7 +65,7 @@
     
     <div class="container_guest_info_form">
         <h1 class="form_guest_info_header">Guest Infomation</h1>
-        <form action="Payment webpage 4.html" method="post" class="guest_info_form">
+        <form action="Payment webpage 4.html" method="get" class="guest_info_form">
             <input type="text" class="guest_info_input_fullname" placeholder="Full Name" required>
             <input type="number" class="guest_info_input_phonenumber" placeholder="Phone Number" required min="10000000" max="99999999">
             <input type="email" class="guest_info_input_email" placeholder="Email" required>
@@ -115,6 +115,7 @@
         <p class="information_checkin_date">Check-In date: *insert check out date</p>
         <p class="information_checkout_date">Check-Out date: *insert check out date</p>
         <p class="information_days_counter_date"># days, # nights</p>
+        <p class="information_days_selected_room">Room Selected: *insert room selected</p>
     </div>
 
 
