--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -88,7 +88,7 @@
         <p class="information_days_counter_date"># days, # nights</p>
         <p class="information_days_selected_room">Room Selected: *insert room selected</p>
 
-        <a href="" class="return_to_homepage_button">Return to Home Page</a>
+        <a href="Homepage.html" class="return_to_homepage_button"><p class="return_to_homepage_text">Return to Home Page</p></a>
         
     </div>
 
