--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -129,7 +129,7 @@
             <img src="ImageNVideo/Sentosa suite.jpg" alt="" class="Sentosa_Suite_image_to_book">
 
             <div class="Sentosa_Suite_container_for_button_text">
-                <p class="Sentosa_Suite_text_to_book">Indulge in exquisite luxury within this suite boasting panoramic views of Sentosa Island, epitomizing elegance with meticulous attention to detail, offering a grand, comfortable, and memorable stay in utmost style.</p>
+                <p class="Sentosa_Suite_text_to_book">Indulge in exquisite luxury within this suite boasting panoramic views of Sentosa Island, epitomizing elegance wi</p>
                 <a href="Payment webpage 3.html" class="Sentosa_Suite_button"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
