--- a/UX Offical/template.html
+++ b/UX Offical/template.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
+  <script src="check_date.js"></script>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link rel="stylesheet" href="CSS/Footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
