--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -78,7 +78,11 @@
             <img src="ImageNVideo/standard garden view room.jpg" alt="" class="garden_oasis_room_image_to_book">
 
             <div class="garden_oasis_room_container_for_button_text">
-                <p class="garden_oasis_room_text_to_book">Embrace tranquility in this elegantly designed haven, where French doors open to a private garden, blending nature's beauty with modern luxury, offering a serene retreat for an enchanting stay.</p>
+                <h2 class="price_of_room">$100 Per Night</h2>
+                <p class="garden_oasis_room_text_to_book">250 square feet, Single Bedroom</p>
+                <p class="garden_oasis_room_text_to_book">With a Queen Sized bed</p>
+                <p class="garden_oasis_room_text_to_book">Up to 2 Guests</p>
+                <p class="garden_oasis_room_text_to_book">View of the Oasis Garden</p>
                 <a href="Payment webpage 3.html" class="garden_oasis_room_button"><p class="garden_oasis_room_text_in_button">Select Room</p></a>
             </div>
             </div>
@@ -94,7 +98,11 @@
             <img src="ImageNVideo/standard seaview room.jpg" alt="" class="Ocean_Retreat_Room_image_to_book">
 
             <div class="Ocean_Retreat_Room_container_for_button_text">
-                <p class="Ocean_Retreat_Room_text_to_book">Surrender to coastal charm in this room with floor-to-ceiling windows framing mesmerizing ocean vistas, pampering guests with lavish amenities, ensuring a rejuvenating and unforgettable experience.</p>
+                <h2 class="price_of_room">$100 Per Night</h2>
+                <p class="garden_oasis_room_text_to_book">250 square feet, Single Bedroom</p>
+                <p class="garden_oasis_room_text_to_book">With a Queen Sized bed</p>
+                <p class="garden_oasis_room_text_to_book">Up to 2 Guests</p>
+                <p class="garden_oasis_room_text_to_book">View of the Sentosa Beach</p>
                 <a href="Payment webpage 3.html" class="Ocean_Retreat_Room_button"><p class="Ocean_Retreat_Room_text_in_button">Select Room</p></a>
             </div>
             </div>
@@ -111,7 +119,11 @@
             <img src="ImageNVideo/Premium suite.jpg" alt="" class="Premium_Oasis_Suite_image_to_book">
 
             <div class="Premium_Oasis_Suite_container_for_button_text">
-                <p class="Premium_Oasis_Suite_text_to_book"> Unparalleled opulence awaits in this spacious and sophisticated suite, adorned with plush furnishings and premium comforts, providing exclusive services and amenities, perfect for the discerning traveler seeking a lavish escape.</p>
+                <h2 class="price_of_room">$150 Per Night</h2>
+                <p class="garden_oasis_room_text_to_book">350 square feet, 2 Bedrooms</p>
+                <p class="garden_oasis_room_text_to_book">With a Queen Sized bed + Single bed</p>
+                <p class="garden_oasis_room_text_to_book">Up to 3 Guests</p>
+                <p class="garden_oasis_room_text_to_book">View of the Sentosa Beach</p>
                 <a href="Payment webpage 3.html" class="Premium_Oasis_Suite_button"><p class="Premium_Oasis_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
@@ -129,7 +141,11 @@
             <img src="ImageNVideo/Sentosa suite.jpg" alt="" class="Sentosa_Suite_image_to_book">
 
             <div class="Sentosa_Suite_container_for_button_text">
-                <p class="Sentosa_Suite_text_to_book">Indulge in exquisite luxury within this suite boasting panoramic views of Sentosa Island, epitomizing elegance wi</p>
+                <h2 class="price_of_room">$200 Per Night</h2>
+                <p class="garden_oasis_room_text_to_book">450 square feet, 2 Bedrooms, 1 Living Room</p>
+                <p class="garden_oasis_room_text_to_book">With 2 Queen Sized beds</p>
+                <p class="garden_oasis_room_text_to_book">Up to 4 Guests</p>
+                <p class="garden_oasis_room_text_to_book">View of the Oasis Garden</p>
                 <a href="Payment webpage 3.html" class="Sentosa_Suite_button"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
