some interactive stuff

--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/NewNavbar.css                          ">
   <link rel="stylesheet" href="CSS/Resturant.css">
   <link rel="stylesheet" href="CSS/Footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +22,9 @@
         </label>
         <label class ="logo">The logo here</label>
         <ul>
-            <li><a class="active" href="Homepage.html">Home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">rooms</a></li>
+            <li><a class="colorchange" href="Homepage.html">Home</a></li>
+            <li><a href="#" class="colorchange">about</a></li>
+            <li><a href="Rooms webpage.html">rooms</a></li>
             <li><a href="ResturantPage.html">dining</a></li>
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
