--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -28,7 +28,7 @@
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="#">about</a></li>
-            <li><a class="colorchange" href="#">rooms</a></li>
+            <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
             <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
             <li><a class="colorchange" href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
@@ -53,15 +53,7 @@
          <button id="bookbutton" class="Bookingbutton">Book here</button>
          </a>
         </p>
-      <div class="incontainer">
-        <label for="checkin" id="checkindate" style="padding-left: 10px;color: black;">Check in date:</label>
-        <input type="date"  name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31" style="margin-left: 10px;height: 30px; font-size: 17px;" > 
-        <label for="checkout" id="checkoutdate" style="padding-left: 10px;color: black  ;" class="special" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
-        <input type="date" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31" style="margin-left: 10px;height: 30px;font-size: 17px;">
-
-        <div class="arrow-button" id="arrowbutton">
-        <span style="font-size: 24px;"></span>
-        </div>
+        
         </div>
       </div>
     </div>
