--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -28,7 +28,7 @@
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="#">about</a></li>
-            <li><a class="colorchange" href="#">rooms</a></li>
+            <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
             <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
             <li><a class="colorchange" href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
