--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
-            <li><a href="#">rooms</a></li>
+            <li><a href="Rooms webpage.html">rooms</a></li>
             <li><a href="ResturantPage.html">dining</a></li>
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
