--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -39,15 +39,15 @@
     <image src="ImageNVideo/1080p img.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
     </div>
       
-    <div class="searchbarcontainer">
+    <div class="searchbarcontainer" style="font-size: 18px;">
       <div class="textInPicture">
         <p style="text-align: left;">
           <div class="span">
-          <span class="specialSpan" style="color: white; margin-right: 20px;">Where luxury meets paradise</span>
+          <span class="specialSpan" style="color: white;">Where luxury meets paradise</span>
         </div>
           <br>
-         <span style="font-family: 'Playfair Display', serif; color: white;"> Experience true opulence and<br> personalized service at its finest<br>
-         immerse yourself in luxury <br>
+         <span class="pictext"style="font-family: 'Playfair Display', serif; color: white;"> Experience true opulence and personalized service at its finest,
+          our resort offers a haven of relaxation and adventure, promising to create cherished memories for every guest.
         
          <a href="Rooms webpage.html">
          <button id="bookbutton" class="Bookingbutton">Book here</button>
