--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -34,7 +34,7 @@
     </nav>
     <article>
         <p> 
-        <h1>Welcome to Luxury Resort!</h1>
+        <h1 class="title">Welcome to Luxury Resort!</h1>
         </p>
     </article>
     <footer>
