--- a/UX Offical/Rooms webpage.html
+++ b/UX Offical/Rooms webpage.html
@@ -53,7 +53,7 @@
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Garden Oasis Room</h1>
                 <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
-                <a href="" class="roombutton">Learn More</a>
+                <a href="Garden View Standard room.html" class="roombutton">Learn More</a>
             </div>  
         </div>
     </div>
@@ -65,7 +65,7 @@
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Ocean Retreat Room</h1>
                 <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
-                <a href="" class="roombutton">Learn More</a>
+                <a href="Sea View Standard Room.html" class="roombutton">Learn More</a>
             </div>  
         </div>
     </div>
@@ -77,7 +77,7 @@
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Premium Oasis Suite</h1>
                 <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
-                <a href="" class="roombutton">Learn More</a>
+                <a href="Premium Suite.html" class="roombutton">Learn More</a>
             </div>  
         </div>
     </div>
@@ -89,7 +89,7 @@
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Sentosa Suite</h1>
                 <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
-                <a href="" class="roombutton">Learn More</a>
+                <a href="Sentosa Suite.html" class="roombutton">Learn More</a>
             </div>  
         </div>
     </div>
