--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -27,7 +27,7 @@
           <label class ="logo">The logo here</label>
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
-            <li><a class="colorchange" href="#">about</a></li>
+            <li><a class="colorchange" href="about us.html">about</a></li>
             <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
             <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
             <li><a class="colorchange" href="#">facilities</a></li>
