--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -5,67 +5,67 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <script src="check_date.js"></script>
-  <link rel="stylesheet" href="CSS/aboutus.css">
-  <link rel="stylesheet" href="CSS/NewNavbar.css">
-  <link rel="stylesheet" href="CSS/Footer.css">
+  <link rel="stylesheet" href="CSS/HomepageNav.css">
+  <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
+  <link href="CSS/Footer.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
   
-  <title>Dining</title><!-- REPLACE title as what u want -->
+  <title>Home</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFF0;">
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkboxbutton">
+      <nav>
+          <input type="checkbox" id="check">
+          <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
-        </label>
-        <label class ="logo">The logo here</label>
-        <ul>
-            <li><a class="active" href="Homepage.html">Home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">rooms</a></li>
-            <li><a href="ResturantPage.html">dining</a></li>
-            <li><a href="#">facilities</a></li>
+          </label>
+          <label class ="logo">The logo here</label>
+          <ul>
+            <li><a class="colorchange" href="Homepage.html">Home</a></li>
+            <li><a class="colorchange" href="about us.html">about</a></li>
+            <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
+            <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
+            <li><a class="colorchange" href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
-        </ul>
-    </nav>
-    <article>
-        <p> 
-        <h1 class="title">Welcome to Luxury Resort!</h1>
-        </p>
-    </article>
-    <footer>
-        <div class="section1_footer">
-          <div class="part1footerleft">
-              <div class="insidepart1">
-                  <h1 class="title">Contact Us</h1>
-                  <div class="contact_container">
-                  <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
-                  <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
-                  <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
-                  </div>
-              </div> 
-          </div>
+            </ul>
+      </nav>
+      <article>
+        
+      </article>
+<footer>
+  <div class="section1_footer">
+    <div class="part1footerleft">
+        <div class="insidepart1">
+            <h1 class="title">Contact Us</h1>
+            <div class="contact_container">
+            <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+            <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+            <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+            </div>
+        </div> 
+    </div>
 
-          <div class="part1footerright">
-              <div class="insidepart1">
-                  <h1 class="title">Socials</h1>
-                  <div class="socialicon_container">
-                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
-                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
-                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
-                  <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
-                  </div>  
-              </div>
-          </div>
+    <div class="part1footerright">
+        <div class="insidepart1">
+            <h1 class="title">Socials</h1>
+            <div class="socialicon_container">
+              <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+              <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+              <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
+            <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+            </div>  
         </div>
+    </div>
+  </div>
 
-        <div class="part2footer">
-            <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
-        </div>
-    </footer>
+  <div class="part2footer">
+      <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+  </div>
+</footer>
 </body>
 </html>
