--- a/UX Offical/Sea View Standard Room.html
+++ b/UX Offical/Sea View Standard Room.html
@@ -24,7 +24,7 @@
             <label class ="logo">The logo here</label>
             <ul>
                 <li><a class="active" href="Homepage.html">Home</a></li>
-                <li><a href="#">about</a></li>
+                <li><a href="about us.html">about</a></li>
                 <li><a href="Rooms webpage.html">rooms</a></li>
                 <li><a href="ResturantPage.html">dining</a></li>
                 <li><a href="#">facilities</a></li>
