--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -43,10 +43,10 @@
       <div class="textInPicture">
         <p style="text-align: left;">
           <div class="span">
-          <span class="specialSpan" style="color: white;">Where luxury meets paradise</span>
+          <span class="specialSpan" style="color: white; font-family: 'Playfair Display', serif;">Where luxury meets paradise</span>
         </div>
           <br>
-         <span class="pictext"style="font-family: 'Playfair Display', serif; color: white;"> Experience true opulence and personalized service at its finest,
+         <span class="pictext"style="font-family: 'Open Sans',sans-serif; color: white;"> Experience true opulence and personalized service at its finest,
           our resort offers a haven of relaxation and adventure, promising to create cherished memories for every guest.
         
          <a href="Rooms webpage.html">
