--- a/UX Offical/Payment webpage 1 (Date Selection).html
+++ b/UX Offical/Payment webpage 1 (Date Selection).html
@@ -42,7 +42,7 @@
 
     <div class="payment_indicator">
         <div class="date_indicator">
-            <a href="" class="date_selectionlink"><p class="circle_step_counter_date">1</p></a>
+            <a href="Payment webpage 1 (Date Selection).html" class="date_selectionlink"><p class="circle_step_counter_date">1</p></a>
             <p class="text_next_to_date_indicator_icon">Date Selection</p>
         </div>
 
