--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -42,17 +42,17 @@
 
     <div class="payment_indicator">
         <div class="date_indicator">
-            <a href="" class="date_selectionlink"><p class="circle_step_counter_date">1</p></a>
+            <a href="Payment webpage 1 (Date Selection).html" class="date_selectionlink"><p class="circle_step_counter_date">1</p></a>
             <p class="text_next_to_date_indicator_icon">Date Selection</p>
         </div>
 
         <div class="room_indicator">
-            <a href="" class="room_selectionlink"><p class="circle_step_counter_room">2</p></a>
+            <a href="Payment webpage 2 (Room selection).html" class="room_selectionlink"><p class="circle_step_counter_room">2</p></a>
             <p class="text_next_to_room_indicator_icon">Room Selection</p>
         </div>
 
         <div class="guestcard_info_indicator">
-            <a href="" class="guest_selectionlink"><p class="circle_step_counter_guest">3</p></a>
+            <a href="Payment webpage 3.html" class="guest_selectionlink"><p class="circle_step_counter_guest">3</p></a>
             <p class="text_next_to_guest_indicator_icon">Guest & Payment</p>
         </div>
 
