--- a/UX Offical/Rooms webpage.html
+++ b/UX Offical/Rooms webpage.html
@@ -27,8 +27,8 @@
             <li><a href="about us.html">about</a></li>
             <li><a href="Rooms webpage.html">rooms</a></li>
             <li><a href="ResturantPage.html">dining</a></li>
-            <li><a href="#">facilities</a></li>
-            <li><a href="#" class="navbutton">Book now</a></li>
+            <li><a href="">facilities</a></li>
+            <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
         </ul>
     </nav>
 
