--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -32,7 +32,7 @@
             <li><a href="Rooms webpage.html">rooms</a></li>
             <li><a href="ResturantPage.html">dining</a></li>
             <li><a href="#">facilities</a></li>
-            <li><a href="#" class="navbutton">Book now</a></li>
+            <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
         </ul>
     </nav>
 
