--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -20,10 +20,8 @@
         <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
         </label>
-        <label class ="logo">The logo here</label>
+        <label class ="logo">The logo</label>
         <ul>
-            <li><a class="colorchange" href="Homepage.html">Home</a></li>
-            <li><a href="#" class="colorchange">about</a></li>
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="about us.html">about</a></li>
             <li><a href="Rooms webpage.html">rooms</a></li>
