--- a/UX Offical/Payment webpage 3 Guest Info & Card details.html
+++ b/UX Offical/Payment webpage 3 Guest Info & Card details.html
@@ -23,12 +23,12 @@
         </label>
         <label class ="logo">The logo here</label>
         <ul>
-            <li><a class="active" href="Homepage.html">Home</a></li>
-            <li><a href="about us.html">about</a></li>
-            <li><a href="Rooms webpage.html">rooms</a></li>
-            <li><a href="ResturantPage.html">dining</a></li>
-            <li><a href="#">facilities</a></li>
-            <li><a href="#" class="navbutton">Book now</a></li>
+            <li><a class="colorchange" href="Homepage.html">Home</a></li>
+            <li><a class="colorchange" href="about us.html">about</a></li>
+            <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
+            <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
+            <li><a class="colorchange" href="#">facilities</a></li>
+            <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
         </ul>
     </nav>
 
